<resources>
    <string name="app_name">MovieRent</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="action_register">Register</string>

    <string name="all_movies_ws">movies/getMovieByCategory</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_overview">Overview</string>
    <string name="movie_category">Category</string>
    <string name="movie_stock">Stock</string>
    <string name="title_activity_categories_admin">CategoriesAdminActivity</string>
    <string name="categories_admin">Manage Categories</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="prompt_new_category_name">New category name</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="add_movie">Add movie</string>


    <string name="login_ws">login/dologin</string>
    <string name="pref_default_url">http://192.168.43.115:8080/rentmoviews</string>
    <string name="register_ws">register/doRegister</string>
    <string name="add_movie_ws">movies/addMovie</string>
    <string name="update_movie_ws">movies/updateMovie</string>
    <string name="rent_movie">Rent movie</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="History">History</string>
    <string name="search">Search</string>
    <string name="tmdb_key">762dddd78561845115597c1a5ceb8247</string>
    <string name="tmdb_search_api">https://api.themoviedb.org/3/search/movie</string>
    <string name="tmdb_movie_api">https://api.themoviedb.org/3/movie/</string>
    <string name="poster_path">http://image.tmdb.org/t/p/w185//</string>
    <string name="enter_movie_name">Enter a movie name...</string>
    <string name="search_tmdb">Import from TMDB</string>
    <string name="thumb_url">Thumbnail image url</string>
    <string name="delete_movie">Delete movie</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="delete_ws">movies/deleteMovie</string>
    <string name="update_movie">Update movie</string>
    <string name="rent_movie_ws">rent/take</string>
    <string name="return_movie_ws">rent/return</string>
    <string name="check_user_rent_ws">rent/userMovieRent</string>
    <string name="all_categories_ws">categories/getAllCategories</string>
    <string name="add_categories_ws">categories/addCategory</string>
    <string name="update_categories_ws">categories/updateCategory</string>
    <string name="delete_categories_ws">categories/deleteCategory</string>
    <string name="title_activity_history">History</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="rent_date">Rent Date</string>
    <string name="return_date">Return Date</string>
    <string name="history_ws">rent/userRents</string>
    <string name="new_movie_category">New movie category</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="submit">Submit</string>
    <string name="comments_ws">comments</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_url">Web Service URL</string>
</resources>
