<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bareitan.movierent.MovieDetailActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_name"
            android:text="@string/movie_overview"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

        <TextView
            android:id="@+id/movie_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_overview"
            android:text="@string/movie_category"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

        <Switch
            android:id="@+id/rent_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent_movie"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_category"
            app:srcCompat="@drawable/placeholder"
            android:layout_marginLeft="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>



</LinearLayout>
