<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#444"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:text="@string/return_date" />

        <TextView
            android:id="@+id/return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rent_date"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/movie_name"
            android:text="@string/rent_date" />

        <TextView
            android:id="@+id/rent_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_name"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/textView6"
            android:layout_toRightOf="@+id/textView6"
            android:text="TextView" />

    </RelativeLayout>
</android.support.v7.widget.CardView>